Reworded the jumbotron.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,21 @@
 #java {
   display: none;
   margin: 0 30%;
+  min-width: 320px;
 }
 
 #cssreact {
   display: none;
   margin: 0 30%;
+  min-width: 320px;
 }
 
 #cnet {
   display: none;
   margin: 0 30%;
+  min-width: 320px;
 }
+
 .result {
   text-align: center;
 }
